--- a/nginx.conf
+++ b/nginx.conf
@@ -6,16 +6,16 @@ worker_processes  1;
 #Referes to single threaded process. Generally set to be equal to the number of CPUs or cores.
 
 #error_log  logs/error.log; #error_log  logs/error.log  notice;
-#Specifies the file where server logs. 
+#Specifies the file where server logs.
 
 #pid        logs/nginx.pid;
 #nginx will write its master process ID(PID).
 
 events {
     worker_connections  1024;
-        # worker_processes and worker_connections allows you to calculate maxclients value: 
+        # worker_processes and worker_connections allows you to calculate maxclients value:
         # max_clients = worker_processes * worker_connections
-}   
+}
 
 
 http {
@@ -34,7 +34,7 @@ http {
     sendfile        on;
     # If serving locally stored static files, sendfile is essential to speed up the server,
     # But if using as reverse proxy one can deactivate it
-    
+
     #tcp_nopush     on;
     # works opposite to tcp_nodelay. Instead of optimizing delays, it optimizes the amount of data sent at once.
 
@@ -44,9 +44,9 @@ http {
 
     #gzip  on;
     # tells the server to use on-the-fly gzip compression.
-	
-    
-   
+
+
+
 
 
     # another virtual host using mix of IP-, name-, and port-based configuration
@@ -84,7 +84,7 @@ http {
     #    }
     #}
     server {
-        listen 8000;
+        listen 8080;
         server_name _;
         root /app/public;
 
@@ -105,7 +105,7 @@ http {
         error_page 404 /index.php;
 
         location ~ \.php$ {
-            fastcgi_pass 127.0.0.1:9000;
+            fastcgi_pass php:9000;
             fastcgi_param SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
             include fastcgi_params;
         }
