--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,8 +15,7 @@ services:
             - ./:/app
 
     mysql:
-        image: 'mysql:latest'
-        command: --default-authentication-plugin=mysql_native_password
+        image: 'mysql:5.7'
         volumes:
           - db-data:/var/lib/mysql
         environment:
